# zero2prod

./: Cargo.toml  Justfile  deny.toml
.github/workflows/: audit.yaml  main.yaml
src/: lib.rs  main.rs
tests/: health_check.rs
