[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sam Clark <1059176+samhclark@users.noreply.github.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.18"